src/SfxWeb/src/styles.scss
/* ... */
.table-responsive {
    display: block;
    width: 100%;
    overflow-y: visible;
    -webkit-overflow-scrolling: touch;
}

.table>tbody>tr>td {
    line-height: 1.42857;
    vertical-align: top;
    border-top: 1px solid var(--accent-underline);
}

.clear-button {
    border-radius: 0px;
    background-color: transparent;
    border: 0px;
    color: var(--accent-lightblue);
    cursor: pointer;
}

.clear-button:disabled {
    color: gray;
}

.simple-button {
    border: var(--accent-darkblue) 1px solid;
    color: var(--font-primary-color);
    border-radius: var(--primary-border-radius);
    padding: 6px 12px;
    cursor: pointer;
    background-color: var(--primary-background-color);
    transition: .25s box-shadow;

    &:focus, &:hover {
      box-shadow: var(--heavy-box-shadow);
    }

    &:disabled {
        border-color: #727272;
    }
}

.simple-button-calendar {
    border: #727272 1px solid;
    color: var(--accent-darkblue);
    border-radius: 0px 5px 5px 0px;
    padding: 6px 12px;
    cursor: pointer;
    background-color: var(--primary-background-color);
    transition: .25s box-shadow;

    &:focus, &:hover {
      box-shadow: var(--heavy-box-shadow);
    }
}

.solid-button {
    border: var(--accent-darkblue) 1px solid;
    color: var(--font-primary-color);
    padding: 4px 12px;
    cursor: pointer;
    background-color: var(--accent-darkblue);

    &:disabled {
        opacity: .65;
    }
}

.blue {
    background-color: var(--accent-darkblue);
}

.yellow {
  background-color: var(--badge-warning);
}

.red {
  background-color: var(--badge-error);
}

.dropdown-item {
    color: var(--font-primary-color);
    font-size: 14px;
    padding: 2px 4px;
}
.dropdown-item:hover {
    background-color: var(--accent-darkblue);
    box-shadow: var(--heavy-box-shadow);
    border-radius: var(--primary-border-radius);
    color: var(--font-primary-color);
}

.link {
    color: var(--accent-lightblue);
    cursor: pointer;
}

.page-link {
    background-color: var(--primary-background-color);
    color: var(--accent-lightblue);
    border: 0px;
    border-top-left-radius: 0px !important;
    border-top-right-radius: 0px !important;
    border-bottom-left-radius: 0px !important;
    border-bottom-right-radius: 0px !important;
}

.page-link:active {
    background-color: var(--accent-darkblue);
    color: var(--font-primary-color);
}

.page-item.disabled .page-link{
    background-color: #5a5a5a;
    color: var(--font-primary-color);
    border: 1px solid #5a5a5a;
}

.flat-button {
    border: transparent 1px solid;
    color: var(--font-primary-color);
    padding: 4px 12px;
    cursor: pointer;
    background-color: transparent;
    border-radius: var(--primary-border-radius);

    &.round {
      border-radius: 50px;
    }

    &:hover {
        background-color: rgba(0, 0, 0, 0.25);
    }
}

.empty-button {
    border: var(--accent-darkblue) 0px solid;
    color: var(--font-primary-color);
    padding: 4px 12px;
    cursor: pointer;
    background-color: transparent;
}

.empty-button:hover {
    background-color: var(--primary-background-color);
}

// TODO consider hiding drop down?
.hidden-toggle {
    .dropdown-toggle::after {
        display: none;
    }
}

.rotate {
    animation-name: rotate;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}
@keyframes rotate {
    from {
        transform: scale( 1 ) rotate( 0deg );
    }

    to {
        transform: scale( 1 ) rotate( 360deg );
    }
}

.input-flat {
    padding: 3px 6px;
    font-size: 10pt;
    border-style: solid;
    border-width: 1px;
    border-color: #727272;
    background-color: transparent;
    color: var(--font-accent-color);
    border-radius: var(--primary-border-radius);

    &:focus, &:hover {
      box-shadow: var(--heavy-box-shadow);
    }
    &::placeholder{
        color: var(--font-placeholder-color);
        font-style: italic;
    }
}

.input-flat.ng-valid[required], .input-flat.ng-valid.required  {
    border-left: 5px solid var(--badge-ok);
  }

  .input-flat.ng-invalid:not(form)  {
    border-left: 5px solid var(--badge-error);
  }

.search-match {
  color: black;
  background-color: #FDFBAC;
}


.row-wrapper-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.row-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    overflow-x: auto;
    white-space: nowrap;
}

.nav-tabs, .nav-link {
    border-bottom-width: 0px;
    color: #FFFFFF !important;
    border-bottom-color: inherit;
}

.nav-link:hover {
    border-left-color: transparent !important;
    border-right-color: transparent !important;
    border-top-color: transparent !important;

}

.toast {
    border-radius: 0px;

    .toast-header {
        color: var(--font-primary-color);
        background-color: rgb(90, 90, 90);
        font-weight: 200;
    }
}

.spacer {
    width: 10px; height: 1px;
}


.highlight-hover {
    transition: .5s;
    &:hover, &:focus-within {
        filter: brightness(100%);
        background-color: rgba(255, 255, 255, 0.1);
    }
}

.page-item.active .page-link {
  z-index: 3;
  color: #fff;
  background-color: #262626;
  border-color: var(--accent-darkblue);
  border: 1px solid var(--accent-darkblue);
  box-sizing: border-box;
}


@media screen and (-ms-high-contrast: active) {
  .highcharts-title {
    color: black !important;
    fill: black !important;
  }

  .highcharts-subtitle {
    color: black !important;
    fill: black !important;
  }

  .dropdown-item.disabled, .dropdown-item:disabled {
    border: 1px solid black;
  }

  .page-item {
    .page-link {
    border: 1px solid gray !important;
    box-sizing: border-box;

    &:focus {
      border: 2px solid gray !important;
    }
  }
  }
}

:checked {
  accent-color: var(--accent-darkblue);
}

.flex-center {
    display: flex;
    align-items: center;
}
/* ... */

